src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_MarkupExtensionEmptyBrackets.xaml
<!--
/*******************************************************************
 * Purpose: Empty curly brackets nested inside another MarkupExtension.
 * Contributors: Microsoft
 *
 
  
 * Revision:         $Revision: 2 $
 
 * Filename:         $Source: //depot/devdiv/Orcas/SP/feature/WPF/wpf/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_MarkupExtensionEmptyBrackets.xaml $
********************************************************************/
-->
<Page
    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">

    <Grid>
        <Grid.Resources>
            <Style TargetType="{x:Type TypeName=&apos;{}&apos;}" />
        </Grid.Resources>
        <Button />
    </Grid>
</Page>
